package pb

// fix for migratio from gogo proto

func (*AuditContext) XXX_MessageName() string {
	return "ocf.cloud.resourceaggregate.pb.AuditContext"
}
func (*EventMetadata) XXX_MessageName() string {
	return "ocf.cloud.resourceaggregate.pb.EventMetadata"
}
func (*ResourcePublished) XXX_MessageName() string {
	return "ocf.cloud.resourceaggregate.pb.ResourcePublished"
}
func (*ResourceUnpublished) XXX_MessageName() string {
	return "ocf.cloud.resourceaggregate.pb.ResourceUnpublished"
}
func (*ResourceChanged) XXX_MessageName() string {
	return "ocf.cloud.resourceaggregate.pb.ResourceChanged"
}
func (*ResourceUpdatePending) XXX_MessageName() string {
	return "ocf.cloud.resourceaggregate.pb.ResourceUpdatePending"
}
func (*ResourceUpdated) XXX_MessageName() string {
	return "ocf.cloud.resourceaggregate.pb.ResourceUpdated"
}
func (*ResourceRetrievePending) XXX_MessageName() string {
	return "ocf.cloud.resourceaggregate.pb.ResourceRetrievePending"
}
func (*ResourceRetrieved) XXX_MessageName() string {
	return "ocf.cloud.resourceaggregate.pb.ResourceRetrieved"
}
func (*ResourceDeletePending) XXX_MessageName() string {
	return "ocf.cloud.resourceaggregate.pb.ResourceDeletePending"
}
func (*ResourceDeleted) XXX_MessageName() string {
	return "ocf.cloud.resourceaggregate.pb.ResourceDeleted"
}
func (*ResourceStateSnapshotTaken) XXX_MessageName() string {
	return "ocf.cloud.resourceaggregate.pb.ResourceStateSnapshotTaken"
}
